--- a/Outputs/Dast.Outputs.Dash/Dast.Outputs.Dash.csproj
+++ b/Outputs/Dast.Outputs.Dash/Dast.Outputs.Dash.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dast\Dast.csproj" />
+  </ItemGroup>
+
 </Project>
