Introduce document format extensibility, refactor media usage and improve console executable

--- a/Executables/Dast.Console/Dast.Console.csproj
+++ b/Executables/Dast.Console/Dast.Console.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Dast.Extensibility\Dast.Extensibility.csproj" />
     <ProjectReference Include="..\..\Dast\Dast.csproj" />
   </ItemGroup>
 
