--- a/Dast.Extensibility/Dast.Extensibility.csproj
+++ b/Dast.Extensibility/Dast.Extensibility.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
